local nuitrack directory without directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ set(SOURCES
     src/NuitrackGLSample.cpp
     src/Application.cpp
     src/NuitrackGLSample.h
+    src/UserInteraction.h
+    src/UserInteraction.cpp
     src/imgui/imconfig.h
     src/imgui/imgui.cpp
     src/imgui/imgui.h
